# main

./: .gitignore  README.md  Topology_CSV_Logic.md  docker-compose.yml  docker_netops.sh  index.htm  index.html  install.sh  lldp-manual.html  lldp_sql_service.py  run.sh  start_netops.sh
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: routes.py
backend/app/models/: schemas.py
backend/app/services/: adapter_runtime.py  adapters.py  command_capability_store.py  command_group_runtime.py  command_policy.py  command_runtime.py  compound_command_runtime.py  deepseek_diagnoser.py  exporter.py  job_orchestrator_v2.py  llm_diagnoser.py  llm_planner_bridge.py  orchestrator.py  parsers.py  planner_signal_runtime.py  playbook.py  risk_engine.py  store.py  (+4 more)
backend/scripts/: check_ssh_connection.py  cleanup_sop_archive.py  export_audit_report.py  run_device_diag.py  test_deepseek_case.py  unified_diag_client.py  v2_stress_jobs.py  v3_regression_runner.py
backend/tests/: conftest.py  test_adapter_runtime.py  test_autonomous_loop.py  test_command_capability_orchestrator.py  test_command_capability_store.py  test_command_group_runtime.py  test_command_policy.py  test_command_runtime.py  test_compound_command_runtime.py  test_deepseek_diagnoser.py  test_llm_planner_bridge.py  test_orchestrator.py  test_parsers.py  test_planner_signal_runtime.py  test_playbook_and_adapter.py  test_risk_engine.py  test_session_flow.py  test_single_command_runtime.py  test_sop_store.py  test_unified_runs_api.py  test_v2_jobs_api.py
(+332 files in other folders)
