[project]
name = "netops-ai-v1-backend"
version = "0.1.0"
description = "Conversational network troubleshooting backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "httpx>=0.27.0",
  "netmiko>=4.4.0",
  "redis>=5.0.0",
  "sqlalchemy>=2.0.0",
  "asyncpg>=0.29.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
